[package]
name = "causal-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "tokio"] }
futures = "0.3"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p-swarm-derive = "0.35.0"