[package]
name = "causal-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "tokio"] }
futures = "0.3"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p-swarm-derive = "0.35.0"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
hex = "0.4.3"
config = { version = "0.14", features = ["toml"] }
base64 = "0.22"
sha2 = "0.10.8"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.4", features = ["full"] }
serde_json = "1.0"
rand = "0.8.5"
futures = "0.3"

